change cmake file

--- a/convert/CMakeLists.txt
+++ b/convert/CMakeLists.txt
@@ -1,4 +1,4 @@
-project(EvoGeoConvert)
+project(TTReg-Convert)
 cmake_minimum_required(VERSION 2.8)
 
 set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)
@@ -10,11 +10,11 @@ find_package(3rdParty)
 include_directories(${CMAKE_CURRENT_BINARY_DIR})
 include_directories(${PROJECT_SOURCE_DIR}/include)
 
-set(incs )
+
 
 set(srcs src/main.cpp)
 
-set(impl_incs )
+
 
 # Put the ui in the windows project file  
 IF (${CMAKE_BUILD_TOOL} MATCHES "msdev")
@@ -24,6 +24,6 @@ IF (${CMAKE_BUILD_TOOL} MATCHES "devenv")
   SET (srcs ${srcs} ${uis})
 ENDIF (${CMAKE_BUILD_TOOL} MATCHES "devenv")
 
-add_executable(EvoGeoConvert ${srcs} ${incs} ${impl_incs})
+add_executable(TTReg-Convert ${srcs})
 
-target_link_libraries(EvoGeoConvert  ${ThirdParty_LIBS})
+target_link_libraries(TTReg-Convert  ${ThirdParty_LIBS})
